Fix scroll issue, fix overflow issue

--- a/frontend/src/stylesheets/components/envoy-bot.scss
+++ b/frontend/src/stylesheets/components/envoy-bot.scss
@@ -25,6 +25,12 @@
         border: 1px solid black;
         border-radius: 3px;
         background-color: rgb(241, 241, 255);
+        max-width: 66%;
+
+        p {
+          margin: 0;
+          overflow-wrap: anywhere;
+        }
       }
 
       &.user {
